Updated tmux profile

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+#####
+# This file is managed by murex. Please don't edit it manually.
+#####
 unbind C-b
 set-option -g prefix F2 
 
@@ -43,7 +46,7 @@ bind p paste-buffer
 ##bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; run-shell "$TERMINAL -e 'cat /tmp/tmux-buffer | urlview'"
 #bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; run-shell "/bin/sh -c '/usr/bin/urlview /tmp/tmux-buffer'"
 
-### instructs tmux to expect UTF-8 sequences
+### instructs tmux to expect UTF-8 sequences // no longer supported
 #setw -g utf8 on
 #set -g status-utf8 on
 
@@ -60,14 +63,16 @@ setw -g automatic-rename on
 set -g history-limit 1000
 
 # Terminal emulator window title
-#set -g set-titles on
-#set -g set-titles-string '#S:#I.#P #W'
+set -g set-titles on
+set -g set-titles-string '#S:#I.#P #W'
 
 ##set -g status-interval 60
-##set -g status-left-length 30
-##set -g status-left '#[fg=colour237]#I:#P #[fg=white]#(whoami)@#H'
-#set -g status-justify left
-#set -g status-right-length 90
+set -g status-left-length 30
+set -g status-left '#[fg=colour237]#I:#P #[fg=white]#(whoami)@#H'
+set -g status-justify left
+set -g status-right-length 90
+set -g status-bg colour234
+set -g status-fg colour228
 
 # Notifying if other windows has activities
 #setw -g monitor-activity on
@@ -91,3 +96,4 @@ setw -g clock-mode-style 24
 ####################################################
 
 set -sg escape-time 0
+set -g allow-rename on
